@@ -21,8 +21,7 @@ class BadTitleErrorTest extends MediaWikiIntegrationTestCase {
 			ob_start();
 			$e->report();
 			$text = ob_get_clean();
-			$this->expectDeprecationAndContinue( '/MWException::getText was deprecated/' );
-			$this->assertStringContainsString( $e->getText(), $text );
+			$this->assertStringContainsString( $e->getMessage(), $text );
 		}
 	}
 
