@@ -110,6 +110,9 @@ because of Phabricator reports.
 * Parser::getFreshParser(), deprecated in 1.39, has been removed.
 * ConfigFactory::getDefaultInstance(), deprecated since 1.27, has been
   removed.
+* Overriding MWException::getHTML(), ::getText(), ::getPageTitle(), and
+  ::reportHTML() in order to display custom exception messages is no
+  longer supported.
 * …
 
 === Deprecations in 1.43 ===
